unpackaged/main/default/objects/Administration_Data__c/Administration_Data__c.object-meta.xml
<CustomObject>
    <description>To control property wise time management to case create</description>
    <label>Admin Data</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Admin Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>