unpackaged/main/default/objects/Administration_Data__c/fields/Medallia_Alert_Status__c.field-meta.xml
<CustomField>
    <fullName>Medallia_Alert_Status__c</fullName>
    <label>Medallia Alert Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
            <value>
                <fullName>Escalated Level Two</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>