unpackaged/main/default/objects/Administration_Data__c/fields/Medallia_Alert_Types__c.field-meta.xml
<CustomField>
    <fullName>Medallia_Alert_Types__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Medallia Alert Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>