unpackaged/main/default/objects/Administration_Data__c/fields/Progress_Bar_Color__c.field-meta.xml
<CustomField>
    <fullName>Progress_Bar_Color__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Progress Bar Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>