unpackaged/main/default/objects/Administration_Data__c/fields/Property_Id__c.field-meta.xml
<CustomField>
    <fullName>Property_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Property Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>