unpackaged/main/default/objects/Administration_Data__c/fields/Rating_Score__c.field-meta.xml
<CustomField>
    <fullName>Rating_Score__c</fullName>
    <label>Rating Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>