unpackaged/main/default/objects/Administration_Data__c/fields/Reason_for_Contacting__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Contacting__c</fullName>
    <label>Reason for Contacting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Location Accessibility</fullName>
            </value>
            <value>
                <fullName>General Inquiry</fullName>
            </value>
            <value>
                <fullName>Question or Concern</fullName>
            </value>
            <value>
                <fullName>Website Issue or Feedback</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Other/Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Public Relations &amp; Advertising</fullName>
            </value>
            <value>
                <fullName>Rock Spa</fullName>
            </value>
            <value>
                <fullName>Sales/Catering/Meetings</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Seminole Wild Card Online</fullName>
            </value>
            <value>
                <fullName>Login Info &amp; Support</fullName>
            </value>
            <value>
                <fullName>Benefits</fullName>
            </value>
            <value>
                <fullName>Promotion Question</fullName>
            </value>
            <value>
                <fullName>Comp Dollars, Tier Points, or Free Play Questions</fullName>
            </value>
            <value>
                <fullName>Hotel Offers and Reservations</fullName>
            </value>
            <value>
                <fullName>Returns &amp; Refunds</fullName>
            </value>
            <value>
                <fullName>Product Info</fullName>
            </value>
            <value>
                <fullName>Shipping Questions</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Online Support</fullName>
            </value>
            <value>
                <fullName>Dining</fullName>
            </value>
            <value>
                <fullName>Entertainment &amp; Hard Rock Live</fullName>
            </value>
            <value>
                <fullName>Gaming (Slots, Tables, Poker)</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Gaming (Bingo, Slots, Tables, Poker)</fullName>
            </value>
            <value>
                <fullName>Win/Loss Statement Requests</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>