unpackaged/main/default/objects/Administration_Data__c/fields/Receiver_Email__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Email__c</fullName>
    <description>When the user sends an email for Email To Case and receives the email from the same email address it will help us to select email template to response</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Receiver Email / Sender</label>
    <type>Email</type>
</CustomField>