unpackaged/main/default/objects/Administration_Data__c/fields/SF_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>SF_Case_Status__c</fullName>
    <label>SF Case Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>General Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>