unpackaged/main/default/objects/Administration_Data__c/fields/To_Address__c.field-meta.xml
<CustomField>
    <fullName>To_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>To Address</label>
    <type>Email</type>
</CustomField>