unpackaged/main/default/objects/Administration_Data__c/fields/Trackable_Statuses__c.field-meta.xml
<CustomField>
    <fullName>Trackable_Statuses__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trackable Statuses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>