unpackaged/main/default/objects/Administration_Data__c/fields/Un_Trackable_Statuses__c.field-meta.xml
<CustomField>
    <fullName>Un_Trackable_Statuses__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Un-Trackable Statuses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>