unpackaged/main/default/objects/Administration_Data__c/fields/Use_For__c.field-meta.xml
<CustomField>
    <fullName>Use_For__c</fullName>
    <label>Use For</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medallia Property</fullName>
            </value>
            <value>
                <fullName>Case Escalation</fullName>
            </value>
            <value>
                <fullName>Medallia Alert Type</fullName>
            </value>
            <value>
                <fullName>Case Priority With Case Type</fullName>
            </value>
            <value>
                <fullName>Medallia Case Status</fullName>
            </value>
            <value>
                <fullName>WebForms Property</fullName>
            </value>
            <value>
                <fullName>Medallia Survey Progress</fullName>
            </value>
            <value>
                <fullName>Omni Channel</fullName>
            </value>
            <value>
                <fullName>Email To Case Template Selection</fullName>
            </value>
            <value>
                <fullName>Executive Escalation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>