unpackaged/main/default/objects/Administration_Data__c/fields/Webform_Link__c.field-meta.xml
<CustomField>
    <fullName>Webform_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Webform Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>