unpackaged/main/default/objects/Administration_Data__c/recordTypes/Case_Escalation.recordType-meta.xml
<RecordType>
    <fullName>Case_Escalation</fullName>
    <active>true</active>
    <label>Case Escalation</label>
</RecordType>