unpackaged/main/default/objects/Administration_Data__c/recordTypes/Case_Priority_With_Case_Type.recordType-meta.xml
<RecordType>
    <fullName>Case_Priority_With_Case_Type</fullName>
    <active>true</active>
    <label>Case Priority With Case Type</label>
</RecordType>