unpackaged/main/default/objects/Administration_Data__c/recordTypes/Email_To_Case_Template_Selection.recordType-meta.xml
<RecordType>
    <fullName>Email_To_Case_Template_Selection</fullName>
    <active>true</active>
    <description>Using to decide which Email Template should be sent</description>
    <label>Email To Case Template Selection</label>
</RecordType>