unpackaged/main/default/objects/Administration_Data__c/recordTypes/Executive_Escalation.recordType-meta.xml
<RecordType>
    <fullName>Executive_Escalation</fullName>
    <active>true</active>
    <description>To make a case using from and to addresses (Executive)</description>
    <label>Executive Escalation</label>
</RecordType>