unpackaged/main/default/objects/Administration_Data__c/recordTypes/Medallia_Case.recordType-meta.xml
<RecordType>
    <fullName>Medallia_Case</fullName>
    <active>true</active>
    <label>Medallia Case</label>
</RecordType>