unpackaged/main/default/objects/Administration_Data__c/recordTypes/Omni_Channel_Status.recordType-meta.xml
<RecordType>
    <fullName>Omni_Channel_Status</fullName>
    <active>true</active>
    <description>To track omni channel statuses</description>
    <label>Omni Channel Status</label>
</RecordType>