unpackaged/main/default/objects/Administration_Data__c/recordTypes/Web_Forms_Property.recordType-meta.xml
<RecordType>
    <fullName>Web_Forms_Property</fullName>
    <active>true</active>
    <description>To decide  property data coming from web to forms.</description>
    <label>Web Forms Property</label>
</RecordType>