unpackaged/main/default/objects/Administration_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Use_For__c</columns>
    <columns>Trackable_Statuses__c</columns>
    <columns>Un_Trackable_Statuses__c</columns>
    <columns>Medallia_Alert_Types__c</columns>
    <columns>Case_Priority__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>