unpackaged/main/default/objects/Administration_Data__c/listViews/Case_Escalation.listView-meta.xml
<ListView>
    <fullName>Case_Escalation</fullName>
    <columns>NAME</columns>
    <columns>Property_Id__c</columns>
    <columns>Trackable_Statuses__c</columns>
    <columns>Un_Trackable_Statuses__c</columns>
    <columns>Use_For__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Use_For__c</field>
        <operation>equals</operation>
        <value>Case Escalation</value>
    </filters>
    <label>Case Escalation</label>
</ListView>