unpackaged/main/default/objects/Administration_Data__c/listViews/Case_Priority_With_Case_Type.listView-meta.xml
<ListView>
    <fullName>Case_Priority_With_Case_Type</fullName>
    <columns>NAME</columns>
    <columns>Webform_Link__c</columns>
    <columns>Reason_for_Contacting__c</columns>
    <columns>Case_Record_Type__c</columns>
    <columns>Case_Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Use_For__c</field>
        <operation>equals</operation>
        <value>Case Priority With Case Type</value>
    </filters>
    <label>Case Priority With Case Type</label>
</ListView>