unpackaged/main/default/objects/Administration_Data__c/listViews/Email_Template_Selection.listView-meta.xml
<ListView>
    <fullName>Email_Template_Selection</fullName>
    <columns>NAME</columns>
    <columns>Receiver_Email__c</columns>
    <columns>Email_Template_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Use_For__c</field>
        <operation>equals</operation>
        <value>Email To Case Template Selection</value>
    </filters>
    <label>Email Template Selection</label>
</ListView>