unpackaged/main/default/objects/Administration_Data__c/listViews/Executive_Escalation.listView-meta.xml
<ListView>
    <fullName>Executive_Escalation</fullName>
    <columns>NAME</columns>
    <columns>From_Address__c</columns>
    <columns>To_Address__c</columns>
    <columns>SF_Case_Status__c</columns>
    <columns>Case_Record_Type__c</columns>
    <columns>Case_Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Use_For__c</field>
        <operation>equals</operation>
        <value>Executive Escalation</value>
    </filters>
    <label>Executive Escalation</label>
</ListView>