unpackaged/main/default/objects/Administration_Data__c/listViews/Medallia_Progress_Indicator_Setup.listView-meta.xml
<ListView>
    <fullName>Medallia_Progress_Indicator_Setup</fullName>
    <columns>NAME</columns>
    <columns>Rating_Score__c</columns>
    <columns>Progress_Bar_Color__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Use_For__c</field>
        <operation>equals</operation>
        <value>Medallia Survey Progress</value>
    </filters>
    <label>Medallia Progress Indicator Setup</label>
</ListView>