unpackaged/main/default/objects/Administration_Data__c/listViews/Medallia_Property.listView-meta.xml
<ListView>
    <fullName>Medallia_Property</fullName>
    <columns>NAME</columns>
    <columns>Use_For__c</columns>
    <columns>Property_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Use_For__c</field>
        <operation>equals</operation>
        <value>Medallia Property</value>
    </filters>
    <label>Medallia Property</label>
</ListView>