unpackaged/main/default/objects/Administration_Data__c/listViews/Medallia_Setup.listView-meta.xml
<ListView>
    <fullName>Medallia_Setup</fullName>
    <columns>Use_For__c</columns>
    <columns>NAME</columns>
    <columns>Medallia_Alert_Types__c</columns>
    <columns>Case_Priority__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Property_Id__c</columns>
    <columns>SF_Case_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Use_For__c</field>
        <operation>contains</operation>
        <value>Medallia Property,Medallia Alert Type,Medallia Case Status</value>
    </filters>
    <label>Medallia Setup</label>
</ListView>