unpackaged/main/default/objects/Administration_Data__c/listViews/Omni_Channel.listView-meta.xml
<ListView>
    <fullName>Omni_Channel</fullName>
    <columns>NAME</columns>
    <columns>Use_For__c</columns>
    <columns>Trackable_Statuses__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Use_For__c</field>
        <operation>equals</operation>
        <value>Omni Channel</value>
    </filters>
    <label>Omni Channel</label>
</ListView>